--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
   <div class="main-content">
     {{>header}}
+    <p>This site was created by Jodi Nichols. It uses data from mapbox.com and darksky.net.</p>
     <img class="portrait" src="/img/darth_vader.png" />
   </div>
 
